--- a/lev3_3_css-vertiefung-grid/assets/css/style.css
+++ b/lev3_3_css-vertiefung-grid/assets/css/style.css
@@ -64,8 +64,11 @@ h1{
 }
 
 img:first-child{
-    width: 500px;
-    height: 600px;
+    /* width: 500px;
+    height: 600px; */
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
 }
 
 .second-section{
@@ -117,7 +120,7 @@ img:first-child{
     grid-row: 3 / 4;
 }
 
-.figure img{
+.figure1{
     grid-column: 3 / 5;
     grid-row: 1 / 4;
 }
