--- a/lev2_1-grid/assets/css/style.css
+++ b/lev2_1-grid/assets/css/style.css
@@ -7,6 +7,8 @@ body{
     display: grid;
     gap: 5px;
     height: 100vh;
+    width: 50%;
+    margin: 0 auto;
     grid-template-columns: repeat(3, 300px);
     grid-template-rows: repeat(3, 300px);
 }
@@ -43,6 +45,43 @@ section:hover > span{
     height: 300px;
 }
 
+/* Medium devices (tablets, 768px and up)*/
+@media screen and (max-width: 768px) {
+    body{
+        display: grid;
+        padding: 5px;
+        grid-template-columns: repeat(2, 300px);
+        grid-template-rows: repeat(5, 300px);
+        width: 100%;
+    }
+
+    img{
+        width: 300px;
+        height: 300px;
+    }
+}
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+   
+body{
+    display: grid;
+    gap: 5px;
+    height: 100vh;
+    width: 50%;
+    margin: 0 auto;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(9, 1fr);
+}
+
+img{
+    width: 300px;
+    height: 300px;
+}
+
+
+
+
+}
 
 
 
