--- a/lev3_3_css-vertiefung-grid/assets/css/style.css
+++ b/lev3_3_css-vertiefung-grid/assets/css/style.css
@@ -133,9 +133,14 @@ img:first-child{
     text-align: center;
 }
 
+
 .second-section article:nth-of-type(2) h2{
     font-size: 20px;
     margin: 10px 0;
+}
+
+.second-section article:nth-of-type(2) aside:nth-of-type(1) h3{
+    font-style: bold;
 }
 
 .second-section article:nth-of-type(2) aside{
